--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,5 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+lightning_logs/version_4/checkpoints/epoch=0-step=1499.ckpt
+lightning_logs/version_4/checkpoints/epoch=4-step=7495.ckpt
