--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,4 @@ cython_debug/
 .pypirc
 lightning_logs/version_4/checkpoints/epoch=0-step=1499.ckpt
 lightning_logs/version_4/checkpoints/epoch=4-step=7495.ckpt
+lightning_logs/version_4/checkpoints/epoch=0-step=1499.ckpt
